fixed header of flipboard to align center

--- a/flipboard.css
+++ b/flipboard.css
@@ -22,8 +22,8 @@ a {
 } */
 
 .departure-board {
-  display: inline-flex;
-  /* center the departure-board */
+  display: flex;
+  justify-content: center;
   border: 2px solid red;
 }
 
